--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
             глава Международной Ортопедической ассоциации, канд. мед. наук
           </p>
           <p class="sec-7__quote-text">
-            “<span class="sec-7__accent">20Flex Plus</span> -
+            “ <span class="sec-7__accent">20Flex Plus</span> -
             <span class="sec-7__bold"
               >единственный на постсоветском пространстве биологически доступный
               для человеческого организма препарат</span
@@ -827,7 +827,7 @@
       упражнениях.
     </p>
 
-    <form class="sec-9__form">
+    <form class="sec-9__form x_order_form" action="/submit" method="post">
       <input type="email" class="sec-9__input" placeholder="Мой e-mail" />
 
       <button type="submit" class="btn">
@@ -908,7 +908,7 @@
                             <p class="text-mobile">Побочные эффекты</p>
                             <p>
                                 - почечная недостаточность<br>
-                                - гипертония, проблемы с&nbsp;сердцем<br>
+                                - гипертония, сердце<br>
                                 - язва желудка
                             </p>
                         </div>
@@ -1016,7 +1016,7 @@
                         хондропротекторов и присутствует противовоспалительное действие.
                     </p>
                     <p class="effect-conclusion__text">
-                        <span class="dark font_medium">Благодаря этому</span><span class="colortext_blue font_medium"> 20Flex+</span> <span class="dark font_medium">максимально восстанавливает ваши суставы</span><br>
+                        <span class="dark font_medium">Благодаря этому</span><span class="colortext_blue font_medium">20Flex+</span> <span class="dark font_medium">максимально восстанавливает ваши суставы</span><br>
                         за 30 дней и&nbsp;<span class="dark font_medium">не допускает рецидива.</span>
                     </p>
                 </div>
@@ -1470,7 +1470,7 @@
           <div class="reviews-text sec-12__text">
             Я работаю на стройке. Работа тяжелая, сами понимаете. Когда домой
             приходил на алкоголь налягал, чтобы боль в руках унять. Потом подумал,
-            что так и спиться нужно, а у меня только внуки подрастать начали. Им
+            что так и спиться можно, а у меня только внуки подрастать начали. Им
             здоровый дед нужен. Побегал я по врачам. Один молоденький врач
             рассказал мне про комплекс из таблеток и геля какого-то. Ну я и
             попробовал. Недели три принимал таблетки и гель. Смотрю, а рукам-то
@@ -1525,7 +1525,7 @@
             комплекс из двух лекарств - внешнего и внутреннего. Сказал, что это
             комплекс, но мне можно только таблетки, гель брать не обязательно. Но
             я внука попросил и таблетки и гель заказать. Подумал, что так быстрее
-            суставы пройдут. По сравнению с другими этилекарства стоят недорого.
+            суставы пройдут. По сравнению с другими эти лекарства стоят недорого.
             За первую неделю заметил, что колени как-то сильнее стали. Мог
             подняться с дивана без палочки. Болеть перестали они. Прошел весь
             курс. Суставы, как помолодели. Не болят, не ноют. И сам чувствую себя
@@ -1575,7 +1575,7 @@
           <div class="sec-12__result-title">Быстро вылечил кисти рук</div>
 
           <div class="reviews-text sec-12__text">
-            Работаю в офисе весь, естественно, за компьютером. Месяц назад
+            Работаю в офисе весь день, естественно, за компьютером. Месяц назад
             заметил, как у меня кисти стали болеть сильно. Ну понятно, синдром
             какой-то. Руки ж на клавиатуре и мышке весь день. Каждый день пил
             обезболивающие, но заметил, что они как-то стали слабее действовать. А
@@ -1669,14 +1669,34 @@
     </div>
     <p class="sec-12__bottom-text">
       Вы можете оставить текстовый отзыв с фотографией или видеоотзыв. Каждый
-      месяц мы отбираемсамые полезные отзывы и размещаем их на сайте.
+      месяц мы отбираем самые полезные отзывы и размещаем их на сайте.
     </p>
     <div class="sec-12__bottom-sub-title">
       Помогите другим сделать правильный выбор!
     </div>
-    <button type="submit" class="benefis-btn btn sec-12__btn ever-popup-btn">
+    <button type="submit" class="benefis-btn btn sec-12__btn" id="showForm">
       <span class="btn__text-3">Поделиться отзывом</span>
     </button>
+    <div class="sec-12__form-block">
+        <form action="/submit" method="post" class="x_order_form sec-12__form">
+          <label class="sec-12__label">
+              <img class="sec-12__label-image" src="img/user.svg">
+            <input type="text" name="name" required autocomplete="name" class="form-field" placeholder="Моё имя">
+          </label>
+          <label  class="sec-12__label">
+              <img class="sec-12__label-image" src="img/phone.svg">
+            <input type="tel" name="phone" required autocomplete="tel"  class="form-field" placeholder="Мой телефон">
+          </label>
+          <div class="sec-12__text-input">
+            <input id="file-input" hidden type="file">
+            <label class="file-input__icon" for="file-input"><img class="file-icon" src="img/answer-icon.svg"></label>
+            <textarea name="" placeholder="Оставьте отзыв" class="form-textarea"></textarea>
+          </div>
+          
+          <button class="btn sec-12__review-btn">Отправить</button>
+              </form>
+    </div>
+   
   </div>
 </section>
   <section class="section sec-13" id="using">
@@ -1964,7 +1984,7 @@
             <div class="footer-wrap__item footer-wrap__left">
                 <img class="footer-logo" src="img/everad.png" alt="">
                 <div class="box">
-                    <span class="another">20Flex+</span>
+                    <span class="another">20Flex</span>
                     <span class="block">Copyright <span class="date-0" data-format="yyyy">2000</span></span>
                 </div>
             </div>
@@ -1980,55 +2000,53 @@
     </div>
 </footer><div class="ever-popup-build">
     <div class="my-popup" id="cloneThis">
-        <div class="popup-bg">    
-          <div class="popup-wrap">
-              <div class="popup-people">
-                  <img src="img/popup-bg.png" alt="">
-              </div>
-              <div class="popup-product">
-                  <img src="img/pack-pills.png" alt="">
-              </div>
-              <div class="form-wrapper">
-                  <div class="form-box">
-                      <div class="form-box__header">
-                          <h4 class="form-box__title">Успейте купить по&nbsp;промо-цене <br>
-                              <span class="colortext-orange smaller">до <span class="date-0">date</span></span>
-                          </h4>
-                          <div class="price">
-                              <div class="price-old">
-                                  <p class="price__title price__title-old">Старая цена</p>
-                                  <span class="x_price_previous">9999</span><span class="x_currency">ффф</span>
-                              </div>
-                              <div class="price-new">
-                                  <p class="price__title price__title-new">Ваша цена</p>
-                                  <span class="x_price_current">999</span><span class="x_currency">ффф</span>
-                              </div>
-                          </div>
-                          <p class="lastpack-text">Осталось упаковок
-                              со&nbsp;скидкой: <span class="lastpack">15</span>
-                          </p>
-                      </div>
-                      <form action="/submit" method="post" class="x_order_form form">
-                          <div class="input-box">
-                              <img class="input-img" src="img/user.svg" alt="">
-                              <input class="form-field form-name" type="text" name="name" placeholder="Мое имя" required="" autocomplete="name">
-                          </div>
-                          <div class="input-box">
-                              <img class="input-img" src="img/phone.svg" alt="">
-                              <input class="form-field form-tel" type="tel" name="phone" placeholder="Мой телефон" required="" autocomplete="tel">
-                          </div>
-                          <button type="submit" class="form__btn btn">
-                              <span class="btn__text btn__text-1">Заказать</span>
-                              <span class="btn__text btn__text-2">со скидкой</span>
-                          </button>
-                          <p class="form-box__star">* при заказе курса</p>
-                      </form>
-                      <div class="form-box__bottom">
-                          <p class="form-box__security"><img src="img/security.svg" alt="">Ваши данные защищены!</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
+        <div class="popup-wrap">
+            <div class="popup-people">
+                <img src="img/popup-bg.png" alt="">
+            </div>
+            <div class="popup-product">
+                <img src="img/pack-pills.png" alt="">
+            </div>
+            <div class="form-wrapper">
+                <div class="form-box">
+                    <div class="form-box__header">
+                        <h4 class="form-box__title">Успейте купить по&nbsp;промо-цене <br>
+                            <span class="colortext-orange smaller">до <span class="date-0">date</span></span>
+                        </h4>
+                        <div class="price">
+                            <div class="price-old">
+                                <p class="price__title price__title-old">Старая цена</p>
+                                <span class="x_price_previous">9999</span><span class="x_currency">ффф</span>
+                            </div>
+                            <div class="price-new">
+                                <p class="price__title price__title-new">Ваша цена</p>
+                                <span class="x_price_current">999</span><span class="x_currency">ффф</span>
+                            </div>
+                        </div>
+                        <p class="lastpack-text">Осталось упаковок
+                            со&nbsp;скидкой: <span class="lastpack">15</span>
+                        </p>
+                    </div>
+                    <form action="/submit" method="post" class="x_order_form form">
+                        <div class="input-box">
+                            <img class="input-img" src="img/user.svg" alt="">
+                            <input class="form-field form-name" type="text" name="name" placeholder="Мое имя" required="" autocomplete="name">
+                        </div>
+                        <div class="input-box">
+                            <img class="input-img" src="img/phone.svg" alt="">
+                            <input class="form-field form-tel" type="tel" name="phone" placeholder="Мой телефон" required="" autocomplete="tel">
+                        </div>
+                        <button type="submit" class="form__btn btn">
+                            <span class="btn__text btn__text-1">Заказать</span>
+                            <span class="btn__text btn__text-2">со скидкой</span>
+                        </button>
+                        <p class="form-box__star">* при заказе курса</p>
+                    </form>
+                    <div class="form-box__bottom">
+                        <p class="form-box__security"><img src="img/security.svg" alt="">Ваши данные защищены!</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
